<resources>
    <string name="app_name">Easter</string>
    <string name="action_settings">Settings</string>
    <string name="complete_name">Complete name</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="drawer_open"> Open Navigation Drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="sign_up">Sign up!</string>
    <string name="sign_in2">Sign in!</string>
    <string name="sign_in">GO!</string>

    <string name="facebook_app_id">1734181510128618</string>
    <string name="go_media">Go Media</string>

    <string name="write_a_comment">Write a comment...</string>
    <string name="send_media_comment">Send</string>
    <string name="cancel_new_media_comment">Cancel</string>
    <string name="add_new_easter_egg">Add a new easter egg ...</string>
    <string name="description_new_easter_egg">description</string>
    <string name="hint_title">Title:</string>
    <string name="send_new_easter_egg">Send</string>
    <string name="cancel_new_easter_egg">Cancel</string>
    <string name="cancel_edit_easter_egg">Cancel</string>


    <string-array name="filter_array">
        <item>Most recents</item>
        <item>Most Popular</item>
        <item>Best Rating</item>
    </string-array>
</resources>
