<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Easter"
        android:textSize="90dp"
        android:gravity="center"
        android:id="@+id/tv_easter"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_name_user"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:hint="@string/complete_name"
        android:layout_marginTop="75dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_email"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@id/et_username"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"
        android:singleLine="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="15"
        android:id="@id/et_password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/bt_sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#56bc7f" />
</LinearLayout>