<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Easter"
        android:textSize="90dp"
        android:gravity="center"
        android:id="@+id/tv_easter"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:autoText="false"
        android:hint="@string/username"
        android:layout_marginTop="100dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/bt_go"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

</LinearLayout>